website/apwan/static/apwan/templates/account/base.css
.username-header
{
    float: right;
    color: #d7d7d7;
    text-align: right;
}

.username-header h2
{
    margin: 0;
}

.username-header span
{
    color: #d7d7d7;
    font-weight: bold;
    padding: 2px 4px;
}


.account-body .title
{
    margin-top: 0;
}


.account-menu-span
{
    padding: 8px 0;
}

.account-menu-span .nav-header
{
    border-bottom: 1px solid #e3e3e3;
}

.account-menu-span .nav-header .add-link
{
    float: right;
    display: inline;
    margin-top: -3px;
    padding-left: 7px;
    padding-right: 1px;

       -webkit-border-top-left-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
           -moz-border-radius-topleft: 10px;
        -moz-border-radius-bottomleft: 10px;
               border-top-left-radius: 10px;
            border-bottom-left-radius: 10px;
}

.account-menu-span .nav-header .add-link.active,
.account-menu-span .nav-header .add-link.active:hover
{
    background: #0088d6;
}

.account-menu-span .nav-header .add-link.active i,
.account-menu-span .nav-header .add-link.active:hover i
{
    background: url("/static/apwan/lib/bootstrap/img/glyphicons-halflings-white.png") -408px -96px;
}

.account-menu-span .nav-header .add-link:hover
{
    background-color: #eee;
}

.account-menu-span .nav-header .add-link i
{
    margin-top: -1px;
}

